--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ header {
     border-bottom: 1px solid #e4a7af;
 }
 .articles-header{
+    margin-bottom: 50px;
     font-size: 20px;
     margin: 0 auto;
     color: #000000;
