--- a/style.css
+++ b/style.css
@@ -948,6 +948,7 @@ p {
 
 /* Custom Styling for the Updates Section */
 .updates-widget {
+    margin-bottom: 50px;
     background-color: #f8f9fa;
     padding: 40px 0;
     border-radius: 8px;
