--- a/style.css
+++ b/style.css
@@ -985,7 +985,7 @@ video {
     padding: 10px 30px;
     border-radius: 30px; /* Rounded buttons */
     text-transform: uppercase;
-    background-color: #007bff; /* Primary blue color */
+    background-color: #e4a7af; /* Primary pink color */
     color: #fff;
     transition: all 0.3s ease;
 }
